@@ -8,6 +8,7 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     @amount = 100
     @credit_card = credit_card('5555555555554444')
     @declined_card = credit_card('4012888888881881')
+    @check = check({routing_number: '021000021', account_number: '9876543210'})
     @existing_payment_method = '3rEkRlZur2hXKbwwRBidHJAIUTO'
     @declined_payment_method = 'UPfh3J3JbekLeYC88BP741JWnS5'
     @existing_transaction = 'PJ5ICgM6h7v9pBNxDCJjRHDDxBC'
@@ -60,6 +61,14 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     assert_equal 'cached', response.params['payment_method_storage_state']
   end
 
+  def test_successful_purchase_with_check
+    assert response = @gateway.purchase(@amount, @check)
+    assert_success response
+    assert_equal 'Succeeded!', response.message
+    assert_equal 'Purchase', response.params['transaction_type']
+    assert_equal 'cached', response.params['payment_method_storage_state']
+  end
+
   def test_successful_purchase_with_card_and_address
     options = {
       :email => 'joebob@example.com',
@@ -88,7 +97,8 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     @credit_card.first_name = ' '
     assert response = @gateway.purchase(@amount, @credit_card)
     assert_failure response
-    assert_equal "First name can't be blank", response.message
+    assert_equal 'The payment method is invalid.', response.message
+    assert_equal "First name can't be blank", response.params['payment_method_errors'].strip
   end
 
   def test_successful_purchase_with_store
@@ -96,7 +106,7 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     assert_success response
     assert_equal 'Succeeded!', response.message
     assert_equal 'Purchase', response.params['transaction_type']
-    assert_equal 'retained', response.params['payment_method_storage_state']
+    assert %w(retained cached).include?(response.params['payment_method_storage_state'])
     assert !response.params['payment_method_token'].blank?
   end
 
@@ -141,7 +151,8 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     @credit_card.first_name = ' '
     assert response = @gateway.authorize(@amount, @credit_card)
     assert_failure response
-    assert_equal "First name can't be blank", response.message
+    assert_equal 'The payment method is invalid.', response.message
+    assert_equal "First name can't be blank", response.params['payment_method_errors'].strip
   end
 
   def test_successful_authorize_with_store
@@ -149,7 +160,7 @@ class RemoteSpreedlyCoreTest < Test::Unit::TestCase
     assert_success response
     assert_equal 'Succeeded!', response.message
     assert_equal 'Authorization', response.params['transaction_type']
-    assert_equal 'retained', response.params['payment_method_storage_state']
+    assert %w(retained cached).include?(response.params['payment_method_storage_state'])
     assert !response.params['payment_method_token'].blank?
   end
 
